# PIU-Psych-Swarm

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FAQ.md  Future_Improvements_TODO.md  INTERACTIVE_SWARM_BUILDER_PLAN.md  Knowledge_Traceability_Matrix.md  Knowledge_Traceability_Matrix_HCMSAS.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  TIPS.md  TOCSAS_Knowledge_Traceability_Matrix.md  docker-compose.yml  pyproject.toml  swarm_config.yml  swarm_config_hcmsas.yml  swarm_config_tocsas.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  domain_example.md  feature_request.md
.github/workflows/: ci.yml
agents/: how_to_enrich.md
agents/CarePath/: persona.md
agents/CarePath/KB/: family_based_interventions.md  interventions_and_prevention.md  school_based_interventions.md  telehealth_pathways.md
agents/ClinicalPsych/: persona.md
agents/ClinicalPsych/KB/: internet_gaming_disorder.md  smartphone_overuse.md
agents/DrNexus/: persona.md
agents/DrNexus/KB/: internet_gaming_disorder.md  problematic_internet_use_scope.md  smartphone_overuse.md
agents/EpiScope/: persona.md
agents/HCMSAS_DrNexus/: persona.md
agents/HCMSAS_Journalist/: persona.md
agents/HCMSAS_LitScout/: persona.md
agents/HCM_BehaviorLead/: persona.md
agents/HCM_KGEngineer/: persona.md
agents/HCM_MetadataArchitect/: persona.md
agents/HCM_MethodLead/: persona.md
agents/HCM_ReproAuditor/: persona.md
agents/Journalist/: persona.md
agents/LitScout/: persona.md
agents/LitScout/KB/: README.md
agents/NeuroCogs/: persona.md
agents/Orchestrator/: persona.md
agents/Specialist1/: persona.md
agents/Specialist2/: persona.md
agents/TOCSAS_BiasAuditor/: persona.md
agents/TOCSAS_DrNexus/: persona.md
agents/TOCSAS_ExposureDesign/: persona.md
agents/TOCSAS_Journalist/: persona.md
agents/TOCSAS_KGEngineer/: persona.md
agents/TOCSAS_LitScout/: persona.md
agents/TOCSAS_MetadataArchitect/: persona.md
agents/TOCSAS_PathBiomarker/: persona.md
agents/TOCSAS_ToxLead/: persona.md
automation/: __init__.py  config.py  graph.py  main.py  requirements.txt  tools.py
automation/builder/: __init__.py  blueprints.py  doctor.py  generator.py  loader.py  models.py  templates.py  wizard.py
examples/climate_science/: README.md  swarm_config.yml
examples/financial_modeling/: README.md  swarm_config.yml
examples/legal_tech/: README.md  swarm_config.yml
examples/piu_psychiatry/: Article_Draft.md  Drafting_Tasks.md  Phase_1_Blueprint.md  README.md  swarm_config.yml
piu_psych_swarm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
schemas/: tocsas_mnms_tox_extension_v1.jsonld
tests/: test_config.py  test_graph.py  test_tools.py
(+47 files in other folders)
